--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <p>Bachelor's in Computer Science - Media & Intelligence</p>
           </div>
           <div class="date">
-            <p>Aug 2023 - May 2025</p>
+            <p>June 2023 - May 2025</p>
           </div>
         </div>
         <div class="summary">
@@ -84,7 +84,7 @@
       <h2>Projects</h2>
       <div class="project">
         <div class="project-info">
-          <h3>TetraNet</h3>
+          <h3>Project TetraNet: Augmenting Wildfire Mitigation</h3>
           <p class="award">Intel ISEF Finalist</p>
           <ul class="project-description">
             <li>Created & deployed a network of weather-balloons for wildfire mitigation using UNets and Semantic Segmentation (Tensorflow).</li>
@@ -121,6 +121,20 @@
             <li>Formulated a scoring function via a Linear Neural Network to determine the optimal drill for specific mining depths of an asteroid, enabling data-driven decision-making and enhancing operational efficiency in resource extraction operations.</li>
             <li>Employed Streamlit to create a data visualization platform offering dynamic insights for mining expeditions.</li>
             <li><a href="https://optimine.streamlit.app">https://optimine.streamlit.app</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="project-image">
+            <iframe src="BGSA.pdf" frameborder="0"  width="95%" height="260px"></iframe>
+        </div>
+        <div class="project-info">
+          <h3>Accessing the Drivers of Form Using Trait-Based Food Web Models</h3>
+          <p class="award">Presented at UNT Biology Graduate Student Symposium</p>
+          <ul class="project-description">
+            <li>Leveraged text-mining algorithms on the Globi database to compare eigenvector centrality of meta-webs in several habitats.</li>
+            <li>Utilized trait based filters within interlinked meta-webs to identify missing linkages between trophic interactions. </li>
           </ul>
         </div>
       </div>
