--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
           <ul class="project-description">
             <li>Leveraged text-mining algorithms on the Globi database to compare eigenvector centrality of meta-webs in several habitats.</li>
             <li>Utilized trait based filters within interlinked meta-webs to identify missing linkages between trophic interactions. </li>
+            <li>
+              A broader implication of this work will be the development of a pipeline to rapidly construct heuristic food webs from existing biodiversity data, including information rich genomic datasets generated from DNA metabarcoding.</li>
           </ul>
         </div>
       </div>
